# SchoolWork

./: JobSearchPlan.doc  JobSearchPlan.docx
INET2005/M01/: lht_events.css  lht_events.html  lht_list.js  lht_table.js
INET2005/M02/: index.html  package-lock.json  package.json  streets.html  streetsSCRIPT.js  zoomOverlay.html  zoomOverlaySCRIPT.js
INET2005/M02/data/: map(1).geojson
INET2005/M03/: M03Django.docx  Project_Document_V02.doc  Title.doc  ~$3Django.docx
INET2005/M03/HelloWorld/: db.sqlite3
INET2005/M04/: db.sqlite3
INET2005/M04/M04/: urls.py  wsgi.py
INET2005/M05/: Models.doc  db.sqlite3  manage.py
INET2005/Project_05_members_BS_and_Templates/: db.sqlite3  manage.py  powershell.exe.lnk
INET2005/Spring05_Beans/: pom.xml
INET2005/untitled/: test.py  test_watcher.py
Inet/M04/: db.sqlite3  manage.py
MOBI3002/: Project_Document_V02.doc
MOBI3002/MobiPart2/: settings.gradle
PROG2100/: A1.7z  A2.7z  A2v2.7z  README.txt  link.txt
PROG2100/A1/: Airport.cpp  Airport.h  CMakeLists.txt  Delay.cpp  Delay.h  Dispatcher.cpp  Dispatcher.h  Plane.cpp  Plane.h  PlaneGenerator.cpp  PlaneGenerator.h  Queue.cpp  Queue.h  Queue.old.cpp  Queue.old.h  Runway.cpp  Runway.h  Timer.cpp  Timer.h  main.cpp
PROG2100/AirportSimulations/: CBQueueT.h  CLLQueueT.h  CMakeLists.txt  Queue.cpp  Queue.h
PROG2100/Assignment3/MainProject/: CMakeLists.txt  main.cpp
PROG2100/Assignment3/R4E2/R4E2/: Autonomous.h  CMakeLists.txt  Entity.h  Environment.h  Factory.cpp  GoTo.h  Mission.h  Nap.cpp  mainR4E2.cpp
PROG2100/CPPAssignment/: TSCLLQueueT.h
PROG2100/Tanning/: CMakeLists.txt
PROG2100/inClass1/: CMakeLists.txt  main.cpp
PROG2100/inClass2/: CMakeLists.txt  main.cpp
PROG2200/: Project_Document_V02.doc
PROG2200/Game_02/: db_file.properties  db_file.script  file_db  file_db.lck  file_db.properties  file_db.script  pom.xml
PROG2200/M11/: Project_Document_V02 (AutoRecovered).doc  Project_Document_V02.doc  ~$oject_Document_V02.doc
PROG2200/MIDTERM/: HighAlch.ahk
Year 1 Archive/: QueriesSQL.txt  server run  server.cfg
Year 1 Archive/Modified_yeet/: 2-Build_rtkbase.sh  3-Install_autostart.sh  RTKBASE.sh  build_rtkbase.sh  build_rtkbase_Qt5_ARM.sh
Year 1 Archive/OSYS1000/: Quiz2.txt  calc.sh  checkit  hellopiotr.tar.xz  my_echo  pull  push  sesame  shellscripts.tar.xz  zen.sh
Year 1 Archive/PROG1400/: 9928BDDE.tmp
Year 1 Archive/PROG2007/: Assignment01.tar.xz  M02 Array REV2.tar.xz  M02 Array.tar.xz  name.txt
Year 1 Archive/ProjectileHW2/: JuicyOrange.java  Main.java  Projectile.java  ProjectileHW2.plantuml  WaterBomb.java  WaterBottle.java
Year 1 Archive/SAAD1001/: PROG1400M03 Classes and Objects.tar.xz
(+694 files in other folders)
